--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@fastify/jwt": "^7.2.4",
     "@fastify/swagger": "^8.12.1",
+    "@prisma/client": "^5.7.0",
     "fastify": "^4.24.3",
     "fastify-zod": "^1.4.0",
     "zod": "^3.22.4",
