--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.1"
   },
+  "scripts": {
+    "dev": "tsnd --respawn --transpile-only --exit-child src/app.ts"
+  },
   "devDependencies": {
     "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.1.0",
     "prisma": "^5.7.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
