--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "dev": "tsnd --respawn --transpile-only --exit-child src/app.ts"
   },
   "devDependencies": {
+    "@types/fastify-jwt": "^0.8.1",
     "@types/node": "^20.10.4",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "fastify-jwt": "^4.2.0",
     "prettier": "^3.1.0",
     "prisma": "^5.7.0",
     "ts-node": "^10.9.1",
